fix: Fixing image streched on mobile

--- a/src/components/home/details/details.scss
+++ b/src/components/home/details/details.scss
@@ -70,11 +70,7 @@
         z-index: 2;
 
         @include mobile {
-<<<<<<< HEAD
           max-width: initial;
-=======
-          max-width: auto;
->>>>>>> 7931a86ea707fc3eb5e8fc312fe1e33aec973164
           max-height: 100%;
         }
       }
